--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
-# NodeJS specific #
+# NodeJS specific
 node_modules/
 debug.log
 package-lock.json
 test/*.log
+
+# Rust specific
+**/target/
+**/*.rs.bk
+**/Cargo.lock
