--- a/server/Dockerfile-small
+++ b/server/Dockerfile-small
@@ -1,28 +1,33 @@
-FROM rust as planner
+# Prepare recipe with cargo chef. Pay installation cost once, will be cached from second build onwards
+# https://github.com/LukeMathWalker/cargo-chef
+# https://www.lpalmieri.com/posts/fast-rust-docker-builds/
+FROM rust:1.47 as prepper
 WORKDIR app
-# We only pay the installation cost once, 
-# it will be cached from the second build onwards
-# To ensure a reproducible build consider pinning 
-# the cargo-chef version with `--version X.X.X`
-RUN cargo install cargo-chef 
-COPY server/ .
-RUN cargo chef prepare  --recipe-path recipe.json
+RUN cargo install cargo-chef --version 0.1.6
+COPY . .
+RUN cargo chef prepare --recipe-path recipe.json
 
-FROM rust as cacher
+# ---
+# Pay dependency cost once, will be cached from second build onwards
+FROM rust:1.47 as cacher
 WORKDIR app
 RUN cargo install cargo-chef
 COPY --from=planner /app/recipe.json recipe.json
 RUN cargo chef cook --release --recipe-path recipe.json
 
-FROM rust as builder
+# ---
+# Copy cached dependencies, load source and build
+FROM rust:1.47 as builder
 WORKDIR app
-COPY server/ .
-# Copy over the cached dependencies
+RUN rustup component add rustfmt
+COPY . .
 COPY --from=cacher /app/target target
 COPY --from=cacher /usr/local/cargo /usr/local/cargo
-RUN cargo build --release --bin app
+RUN cargo build --release
 
-FROM rust as runtime
-WORKDIR app
-COPY --from=builder /app/target/release/app /usr/local/bin
-ENTRYPOINT ["./usr/local/bin/app"]
+# ---
+# Final distillation
+FROM rust:1.47
+COPY --from=builder /app/target/release/mountains_server .
+USER 1000
+ENTRYPOINT [ "./mountains_server" ]
