--- a/server/Dockerfile-small
+++ b/server/Dockerfile-small
@@ -12,7 +12,7 @@ RUN cargo chef prepare --recipe-path recipe.json
 FROM rust:1.47 as cacher
 WORKDIR app
 RUN cargo install cargo-chef
-COPY --from=planner /app/recipe.json recipe.json
+COPY --from=prepper /app/recipe.json recipe.json
 RUN cargo chef cook --release --recipe-path recipe.json
 
 # ---
