--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,12 +1,13 @@
-FROM node:14.11.0-alpine3.12 AS build
+FROM node:14 AS build
 WORKDIR /usr/src/app
 COPY mountains.proto ./
 COPY client/package*.json ./
 COPY client/src/ ./
-RUN ["npm", "install"]
+RUN ["npm", "install", "--production"]
 
-FROM node:14.11.0-alpine3.12
+FROM gcr.io/distroless/nodejs:14
 WORKDIR /app
 COPY --from=build /usr/src/app ./
+USER 1000
 EXPOSE 3000
-CMD ["start"]
+CMD ["index.js"]
