--- a/kubernetes/mountains-server.yaml
+++ b/kubernetes/mountains-server.yaml
@@ -2,38 +2,38 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: mountains-server-$SUFFIX
-  name: mountains-server-$SUFFIX
+    app: mountains-server
+  name: mountains-server
 spec:
   ports:
-  - port: 8321
+  - port: 3000
     targetPort: grpc
   selector:
-    app: mountains-server-$SUFFIX
+    app: mountains-server
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mountains-server-$SUFFIX
+  name: mountains-server
   labels:
-    app: mountains-server-$SUFFIX
+    app: mountains-server
 spec:
   selector:
     matchLabels:
-      app: mountains-server-$SUFFIX
+      app: mountains-server
   replicas: 1
   template:
     metadata:
       labels:
-        app: mountains-server-$SUFFIX
+        app: mountains-server
     spec:
       containers:
-      - name: mountains-server-$SUFFIX
-        image: $REGISTRY/mountains-server-$SUFFIX:0.1.0
+      - name: mountains-server
+        image: $REGISTRY/mountains-server:0.1.0
         imagePullPolicy: Always
         ports:
           - name: grpc
-            containerPort: 8321
+            containerPort: 3000
         env:
           - name: GRPC_VERBOSITY
             value: "INFO"
