Ensure final container uses distroless

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,7 +1,7 @@
 # Prepare recipe with cargo chef. Pay installation cost once, will be cached from second build onwards
 # https://github.com/LukeMathWalker/cargo-chef
 # https://www.lpalmieri.com/posts/fast-rust-docker-builds/
-FROM rust:1.47 as prepper
+FROM rust:1.48 as prepper
 WORKDIR app
 RUN cargo install cargo-chef --version 0.1.6
 COPY . .
@@ -9,7 +9,7 @@ RUN cargo chef prepare --recipe-path recipe.json
 
 # ---
 # Pay dependency cost once, will be cached from second build onwards
-FROM rust:1.47 as cacher
+FROM rust:1.48 as cacher
 WORKDIR app
 RUN cargo install cargo-chef
 COPY --from=prepper /app/recipe.json recipe.json
@@ -17,7 +17,7 @@ RUN cargo chef cook --release --recipe-path recipe.json
 
 # ---
 # Copy cached dependencies, load source and build
-FROM rust:1.47 as builder
+FROM rust:1.48 as builder
 WORKDIR app
 RUN rustup component add rustfmt
 COPY . .
@@ -27,8 +27,7 @@ RUN cargo build --release
 
 # ---
 # Final distillation
-FROM rust:1.47
+FROM gcr.io/distroless/cc
 COPY --from=builder /app/target/release/mountains_server .
-USER 1000
 EXPOSE 8321
 ENTRYPOINT [ "./mountains_server" ]
