--- a/client/package.json
+++ b/client/package.json
@@ -18,11 +18,11 @@
   "author": "javajon",
   "license": "ISC",
   "dependencies": {
-    "@grpc/proto-loader": "^0.5.5",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "grpc": "^1.24.3",
-    "hbs": "^4.1.1",
-    "uuid": "^8.3.0"
+    "@grpc/proto-loader": "^0.7.12",
+    "body-parser": "^1.20.2",
+    "express": "^4.19.2",
+    "grpc/grpc-js": "^1.10.0",
+    "hbs": "^4.2.0",
+    "uuid": "^9.0.1"
   }
 }
