--- a/client/package.json
+++ b/client/package.json
@@ -19,9 +19,9 @@
   "license": "ISC",
   "dependencies": {
     "@grpc/proto-loader": "^0.7.12",
+    "@grpc/grpc-js": "^1.10.0",
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
-    "grpc/grpc-js": "^1.10.0",
     "hbs": "^4.2.0",
     "uuid": "^9.0.1"
   }
